--- a/estilo.css
+++ b/estilo.css
@@ -1,42 +1,61 @@
-h1{font-size:4.5em;
-color:#5558ff;
-margin-top:200px;
-margin-bottom:50px;
-max-width:1100px;
-font-family:'oswald', sans-serif;}
+* {
+  margin: 0px;
+  padding: 0px;
+  outline: none;
+  text-decoration: none;
+}
 
-h1, p{text-align:center;}
+body {
+  width: 100vw;
+  height: 100vh;
+}
 
-p{font-family:sans-serif;}
+h1 {
+  font-family:'oswald', sans-serif;
+  color: blue;
+  font-size: 2em;
+  text-align: center;
+  margin-bottom: 20px;
+}
 
-main > p{font-size:1.8em;
-line-height:50px;}
+main {
+  width: 900px;
+  max-width: 90vw;
+  position: relative;
+  top: 20%;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  margin: auto;
+}
 
-#cep{width:60vw;
-margin-bottom:100px;}
+#cep {
+  width: 400px;
+  border-radius: 50px;
+  padding: 7px 30px 7px 30px;
+  font-size: 1em;
+  display: block;
+  margin: auto;
+  border: 2px solid black;
+}
 
-#botao{width:60px;
-height:60px;}
+#rodape {
+  text-align: center;
+  font-family: sans-serif;
+  margin-top: 400px;
+}
 
-input{height:50px;
-border: 3px solid black;
-border-radius:100px;
-font-size:2em;
-padding:5px;
-background:#f2f2f2;}
+#resp {
+  text-align: center;
+  margin-top: 15px;
+  font-family: sans-serif;
+}
 
-input:focus{border: 6px solid #0042ff}
+.vl {
+  color: blue;
+  font-weight: 600;
+}
 
-a:visited{color:#8932c7;}
-
-main{margin:0 auto;
-width:70vw;
-max-width:1200px;}
-
-a{text-decoration:none;}
-
-footer{margin-top:600px;
-font-size:1.3em;}
-  font-family:fatface;
-   src: url(fatface.ttf);
-   format:('Truetype');}
+#cep:focus, #cep:hover {
+  border: 3px solid blue;
+}
